packages/noir/native/opentui_v0_5_1.h

// Noir-owned declaration of the canonical OpenTUI v0.5.1 exports selected by
// this package. The source of truth is external/opentui/packages/core/src/zig/
// lib.zig at ad9a818d7a9d73f3386e92a445d0feb4b395c69e.

typedef uint32_t OpenTuiHandle;
OpenTuiHandle createRenderer(uint32_t width, uint32_t height,
                             uint8_t bufferedDestinationKind,
                             uint8_t remoteModeValue, void *feedPtr);
void destroyRenderer(OpenTuiHandle renderer);
uint8_t render(OpenTuiHandle renderer, bool force);
OpenTuiHandle getNextBuffer(OpenTuiHandle renderer);
OpenTuiHandle getCurrentBuffer(OpenTuiHandle renderer);
void resizeRenderer(OpenTuiHandle renderer, uint32_t width, uint32_t height);
void setBackgroundColor(OpenTuiHandle renderer, const uint16_t *color);
void clearTerminal(OpenTuiHandle renderer);
bool copyToClipboardOSC52(OpenTuiHandle renderer, uint8_t target,
                          const uint8_t *text, uint32_t textLen);
bool clearClipboardOSC52(OpenTuiHandle renderer, uint8_t target);
uint32_t getBufferWidth(OpenTuiHandle buffer);
uint32_t getBufferHeight(OpenTuiHandle buffer);
void bufferClear(OpenTuiHandle buffer, const uint16_t *bg);
void bufferDrawText(OpenTuiHandle buffer, const uint8_t *text,
                    uint32_t textLen, uint32_t x, uint32_t y,
                    const uint16_t *fg, const uint16_t *bg,
                    uint32_t attributes);
void bufferFillRect(OpenTuiHandle buffer, uint32_t x, uint32_t y,
                    uint32_t width, uint32_t height, const uint16_t *bg);
void bufferDrawBox(OpenTuiHandle buffer, int32_t x, int32_t y, uint32_t width,
                   uint32_t height, const uint32_t *borderChars,
                   uint32_t packedOptions, const uint16_t *borderColor,
                   const uint16_t *backgroundColor,
                   const uint16_t *titleColor, const uint8_t *title,
                   uint32_t titleLen, const uint8_t *bottomTitle,
                   uint32_t bottomTitleLen);
uint32_t *bufferGetCharPtr(OpenTuiHandle buffer);
uint16_t *bufferGetFgPtr(OpenTuiHandle buffer);
uint16_t *bufferGetBgPtr(OpenTuiHandle buffer);
uint32_t *bufferGetAttributesPtr(OpenTuiHandle buffer);
uint32_t bufferGetRealCharSize(OpenTuiHandle buffer);
uint32_t bufferWriteResolvedChars(OpenTuiHandle buffer, uint8_t *output,
                                  uint32_t outputLen, bool addLineBreaks);