lib/src/ffi/generated_bindings.dart

// Generated FFI bindings from Noir's selected OpenTUI v0.5.1 declarations.
// Regenerate with: dart run ffigen --config ffigen_dynamic.yaml
// Do not edit manually.
// ignore_for_file: unused_element, unused_field

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Auto-generated bindings for OpenTUI
class OpenTuiBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  OpenTuiBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  OpenTuiBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  int createRenderer(
    int width,
    int height,
    int bufferedDestinationKind,
    int remoteModeValue,
    ffi.Pointer<ffi.Void> feedPtr,
  ) {
    return _createRenderer(
      width,
      height,
      bufferedDestinationKind,
      remoteModeValue,
      feedPtr,
    );
  }

  late final _createRendererPtr =
      _lookup<
        ffi.NativeFunction<
          OpenTuiHandle Function(
            ffi.Uint32,
            ffi.Uint32,
            ffi.Uint8,
            ffi.Uint8,
            ffi.Pointer<ffi.Void>,
          )
        >
      >('createRenderer');
  late final _createRenderer = _createRendererPtr
      .asFunction<int Function(int, int, int, int, ffi.Pointer<ffi.Void>)>();

  void destroyRenderer(int renderer) {
    return _destroyRenderer(renderer);
  }

  late final _destroyRendererPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(OpenTuiHandle)>>(
        'destroyRenderer',
      );
  late final _destroyRenderer = _destroyRendererPtr
      .asFunction<void Function(int)>();

  int render(int renderer, bool force) {
    return _render(renderer, force);
  }

  late final _renderPtr =
      _lookup<ffi.NativeFunction<ffi.Uint8 Function(OpenTuiHandle, ffi.Bool)>>(
        'render',
      );
  late final _render = _renderPtr.asFunction<int Function(int, bool)>();

  int getNextBuffer(int renderer) {
    return _getNextBuffer(renderer);
  }

  late final _getNextBufferPtr =
      _lookup<ffi.NativeFunction<OpenTuiHandle Function(OpenTuiHandle)>>(
        'getNextBuffer',
      );
  late final _getNextBuffer = _getNextBufferPtr.asFunction<int Function(int)>();

  int getCurrentBuffer(int renderer) {
    return _getCurrentBuffer(renderer);
  }

  late final _getCurrentBufferPtr =
      _lookup<ffi.NativeFunction<OpenTuiHandle Function(OpenTuiHandle)>>(
        'getCurrentBuffer',
      );
  late final _getCurrentBuffer = _getCurrentBufferPtr
      .asFunction<int Function(int)>();

  void resizeRenderer(int renderer, int width, int height) {
    return _resizeRenderer(renderer, width, height);
  }

  late final _resizeRendererPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(OpenTuiHandle, ffi.Uint32, ffi.Uint32)
        >
      >('resizeRenderer');
  late final _resizeRenderer = _resizeRendererPtr
      .asFunction<void Function(int, int, int)>();

  void setBackgroundColor(int renderer, ffi.Pointer<ffi.Uint16> color) {
    return _setBackgroundColor(renderer, color);
  }

  late final _setBackgroundColorPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(OpenTuiHandle, ffi.Pointer<ffi.Uint16>)
        >
      >('setBackgroundColor');
  late final _setBackgroundColor = _setBackgroundColorPtr
      .asFunction<void Function(int, ffi.Pointer<ffi.Uint16>)>();

  void clearTerminal(int renderer) {
    return _clearTerminal(renderer);
  }

  late final _clearTerminalPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(OpenTuiHandle)>>(
        'clearTerminal',
      );
  late final _clearTerminal = _clearTerminalPtr
      .asFunction<void Function(int)>();

  bool copyToClipboardOSC52(
    int renderer,
    int target,
    ffi.Pointer<ffi.Uint8> text,
    int textLen,
  ) {
    return _copyToClipboardOSC52(renderer, target, text, textLen);
  }

  late final _copyToClipboardOSC52Ptr =
      _lookup<
        ffi.NativeFunction<
          ffi.Bool Function(
            OpenTuiHandle,
            ffi.Uint8,
            ffi.Pointer<ffi.Uint8>,
            ffi.Uint32,
          )
        >
      >('copyToClipboardOSC52');
  late final _copyToClipboardOSC52 = _copyToClipboardOSC52Ptr
      .asFunction<bool Function(int, int, ffi.Pointer<ffi.Uint8>, int)>();

  bool clearClipboardOSC52(int renderer, int target) {
    return _clearClipboardOSC52(renderer, target);
  }

  late final _clearClipboardOSC52Ptr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(OpenTuiHandle, ffi.Uint8)>>(
        'clearClipboardOSC52',
      );
  late final _clearClipboardOSC52 = _clearClipboardOSC52Ptr
      .asFunction<bool Function(int, int)>();

  int getBufferWidth(int buffer) {
    return _getBufferWidth(buffer);
  }

  late final _getBufferWidthPtr =
      _lookup<ffi.NativeFunction<ffi.Uint32 Function(OpenTuiHandle)>>(
        'getBufferWidth',
      );
  late final _getBufferWidth = _getBufferWidthPtr
      .asFunction<int Function(int)>();

  int getBufferHeight(int buffer) {
    return _getBufferHeight(buffer);
  }

  late final _getBufferHeightPtr =
      _lookup<ffi.NativeFunction<ffi.Uint32 Function(OpenTuiHandle)>>(
        'getBufferHeight',
      );
  late final _getBufferHeight = _getBufferHeightPtr
      .asFunction<int Function(int)>();

  void bufferClear(int buffer, ffi.Pointer<ffi.Uint16> bg) {
    return _bufferClear(buffer, bg);
  }

  late final _bufferClearPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(OpenTuiHandle, ffi.Pointer<ffi.Uint16>)
        >
      >('bufferClear');
  late final _bufferClear = _bufferClearPtr
      .asFunction<void Function(int, ffi.Pointer<ffi.Uint16>)>();

  void bufferDrawText(
    int buffer,
    ffi.Pointer<ffi.Uint8> text,
    int textLen,
    int x,
    int y,
    ffi.Pointer<ffi.Uint16> fg,
    ffi.Pointer<ffi.Uint16> bg,
    int attributes,
  ) {
    return _bufferDrawText(buffer, text, textLen, x, y, fg, bg, attributes);
  }

  late final _bufferDrawTextPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            OpenTuiHandle,
            ffi.Pointer<ffi.Uint8>,
            ffi.Uint32,
            ffi.Uint32,
            ffi.Uint32,
            ffi.Pointer<ffi.Uint16>,
            ffi.Pointer<ffi.Uint16>,
            ffi.Uint32,
          )
        >
      >('bufferDrawText');
  late final _bufferDrawText = _bufferDrawTextPtr
      .asFunction<
        void Function(
          int,
          ffi.Pointer<ffi.Uint8>,
          int,
          int,
          int,
          ffi.Pointer<ffi.Uint16>,
          ffi.Pointer<ffi.Uint16>,
          int,
        )
      >();

  void bufferFillRect(
    int buffer,
    int x,
    int y,
    int width,
    int height,
    ffi.Pointer<ffi.Uint16> bg,
  ) {
    return _bufferFillRect(buffer, x, y, width, height, bg);
  }

  late final _bufferFillRectPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            OpenTuiHandle,
            ffi.Uint32,
            ffi.Uint32,
            ffi.Uint32,
            ffi.Uint32,
            ffi.Pointer<ffi.Uint16>,
          )
        >
      >('bufferFillRect');
  late final _bufferFillRect = _bufferFillRectPtr
      .asFunction<
        void Function(int, int, int, int, int, ffi.Pointer<ffi.Uint16>)
      >();

  void bufferDrawBox(
    int buffer,
    int x,
    int y,
    int width,
    int height,
    ffi.Pointer<ffi.Uint32> borderChars,
    int packedOptions,
    ffi.Pointer<ffi.Uint16> borderColor,
    ffi.Pointer<ffi.Uint16> backgroundColor,
    ffi.Pointer<ffi.Uint16> titleColor,
    ffi.Pointer<ffi.Uint8> title,
    int titleLen,
    ffi.Pointer<ffi.Uint8> bottomTitle,
    int bottomTitleLen,
  ) {
    return _bufferDrawBox(
      buffer,
      x,
      y,
      width,
      height,
      borderChars,
      packedOptions,
      borderColor,
      backgroundColor,
      titleColor,
      title,
      titleLen,
      bottomTitle,
      bottomTitleLen,
    );
  }

  late final _bufferDrawBoxPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            OpenTuiHandle,
            ffi.Int32,
            ffi.Int32,
            ffi.Uint32,
            ffi.Uint32,
            ffi.Pointer<ffi.Uint32>,
            ffi.Uint32,
            ffi.Pointer<ffi.Uint16>,
            ffi.Pointer<ffi.Uint16>,
            ffi.Pointer<ffi.Uint16>,
            ffi.Pointer<ffi.Uint8>,
            ffi.Uint32,
            ffi.Pointer<ffi.Uint8>,
            ffi.Uint32,
          )
        >
      >('bufferDrawBox');
  late final _bufferDrawBox = _bufferDrawBoxPtr
      .asFunction<
        void Function(
          int,
          int,
          int,
          int,
          int,
          ffi.Pointer<ffi.Uint32>,
          int,
          ffi.Pointer<ffi.Uint16>,
          ffi.Pointer<ffi.Uint16>,
          ffi.Pointer<ffi.Uint16>,
          ffi.Pointer<ffi.Uint8>,
          int,
          ffi.Pointer<ffi.Uint8>,
          int,
        )
      >();

  ffi.Pointer<ffi.Uint32> bufferGetCharPtr(int buffer) {
    return _bufferGetCharPtr(buffer);
  }

  late final _bufferGetCharPtrPtr =
      _lookup<
        ffi.NativeFunction<ffi.Pointer<ffi.Uint32> Function(OpenTuiHandle)>
      >('bufferGetCharPtr');
  late final _bufferGetCharPtr = _bufferGetCharPtrPtr
      .asFunction<ffi.Pointer<ffi.Uint32> Function(int)>();

  ffi.Pointer<ffi.Uint16> bufferGetFgPtr(int buffer) {
    return _bufferGetFgPtr(buffer);
  }

  late final _bufferGetFgPtrPtr =
      _lookup<
        ffi.NativeFunction<ffi.Pointer<ffi.Uint16> Function(OpenTuiHandle)>
      >('bufferGetFgPtr');
  late final _bufferGetFgPtr = _bufferGetFgPtrPtr
      .asFunction<ffi.Pointer<ffi.Uint16> Function(int)>();

  ffi.Pointer<ffi.Uint16> bufferGetBgPtr(int buffer) {
    return _bufferGetBgPtr(buffer);
  }

  late final _bufferGetBgPtrPtr =
      _lookup<
        ffi.NativeFunction<ffi.Pointer<ffi.Uint16> Function(OpenTuiHandle)>
      >('bufferGetBgPtr');
  late final _bufferGetBgPtr = _bufferGetBgPtrPtr
      .asFunction<ffi.Pointer<ffi.Uint16> Function(int)>();

  ffi.Pointer<ffi.Uint32> bufferGetAttributesPtr(int buffer) {
    return _bufferGetAttributesPtr(buffer);
  }

  late final _bufferGetAttributesPtrPtr =
      _lookup<
        ffi.NativeFunction<ffi.Pointer<ffi.Uint32> Function(OpenTuiHandle)>
      >('bufferGetAttributesPtr');
  late final _bufferGetAttributesPtr = _bufferGetAttributesPtrPtr
      .asFunction<ffi.Pointer<ffi.Uint32> Function(int)>();

  int bufferGetRealCharSize(int buffer) {
    return _bufferGetRealCharSize(buffer);
  }

  late final _bufferGetRealCharSizePtr =
      _lookup<ffi.NativeFunction<ffi.Uint32 Function(OpenTuiHandle)>>(
        'bufferGetRealCharSize',
      );
  late final _bufferGetRealCharSize = _bufferGetRealCharSizePtr
      .asFunction<int Function(int)>();

  int bufferWriteResolvedChars(
    int buffer,
    ffi.Pointer<ffi.Uint8> output,
    int outputLen,
    bool addLineBreaks,
  ) {
    return _bufferWriteResolvedChars(buffer, output, outputLen, addLineBreaks);
  }

  late final _bufferWriteResolvedCharsPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Uint32 Function(
            OpenTuiHandle,
            ffi.Pointer<ffi.Uint8>,
            ffi.Uint32,
            ffi.Bool,
          )
        >
      >('bufferWriteResolvedChars');
  late final _bufferWriteResolvedChars = _bufferWriteResolvedCharsPtr
      .asFunction<int Function(int, ffi.Pointer<ffi.Uint8>, int, bool)>();
